Fix for long room title names above chat, add title attribute so full title can be read on hover, change room name to div instead of i to set a width for overflow

--- a/public/assets/scss/room/_users.scss
+++ b/public/assets/scss/room/_users.scss
@@ -119,10 +119,14 @@
 					display: block;
 				}
 
-				i{
+				div{
 					font-style: normal;
 					font-size: 0.7em;
 					@include opacity(0.5);
+					width: 26em;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
 				}
 
 				span{
